# h2thermo

./: .flake8  .gitattributes  .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  smoke_test.py
.github/workflows/: tests.yml
data/: cea_reference_points.csv
docs/: decisions.md  validation.md
examples/: generate_table.py
scripts/: compare_pure_air_to_pycycle.py  generate_cea_reference.py  probe_pycycle_definitions.py
src/h2thermo/: __init__.py  equilibrium.py  interpolation.py  table.py
src/h2thermo/export/: __init__.py  pycycle.py
tests/: test_equilibrium.py  test_export_pycycle.py  test_interpolation.py  test_table.py  test_validation.py
